[package]
name = "telebash"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
teloxide = { version = "0.17.0", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.28"
simple_logger = "5.0.0"
rand = "0.10.0-rc.0"

[dev-dependencies]
tempfile = "3.23.0"